dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/interpret.c)

AC_CONFIG_AUX_DIR(sh)

PACKAGE=hope
AC_SUBST(PACKAGE)

VERSION=1.0
AC_SUBST(VERSION)

HOPELIB=$datadir/$PACKAGE/lib
AC_SUBST(HOPELIB)
HOPEDOC=$datadir/doc/$PACKAGE
AC_SUBST(HOPEDOC)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_YACC

if test "$GCC" = yes
then	CFLAGS="$CFLAGS -pipe -pedantic -Wall -W"
	CFLAGS="$CFLAGS -Wshadow -Wbad-function-cast -Wcast-qual -Wcast-align"
	CFLAGS="$CFLAGS -Wwrite-strings -Wpointer-arith -Wnested-externs"
	CFLAGS="$CFLAGS -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations"
fi

dnl Checks for libraries.
AC_CHECK_LIB(m,atan)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIGNAL
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(remove)
AC_CHECK_FUNCS(atanh erf hypot)

AC_CONFIG_HEADER(src/config.h)
AC_OUTPUT(doc/Makefile lib/Makefile src/Makefile)

(cd src; make depend)
